[package]
name = "infer-json-stream"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
stringcase = "0.4.0"

[dev-dependencies]
rstest = "0.25.0"
